--- a/app/frontend/styles/new/variables.css
+++ b/app/frontend/styles/new/variables.css
@@ -45,32 +45,32 @@
   --cyan-alpha-11: hsl(192 100% 28% / 0.94);
   --cyan-alpha-12: hsl(192 100% 12% / 0.95);
   --cyan-inverse-subtle: var(--cyan-2);
-  --magenta-1: hsl(340 100% 99%);
-  --magenta-2: hsl(343 78% 98%);
-  --magenta-3: hsl(341 100% 96%);
-  --magenta-4: hsl(341 94% 93%);
-  --magenta-5: hsl(340 81% 89%);
-  --magenta-6: hsl(338 69% 85%);
-  --magenta-7: hsl(338 60% 80%);
-  --magenta-8: hsl(336 55% 73%);
-  --magenta-9: hsl(336 80% 58%);
-  --magenta-10: hsl(336 73% 54%);
-  --magenta-11: hsl(336 75% 45%);
-  --magenta-12: hsl(332 63% 24%);
-  --magenta-inverse: var(--magenta-1);
-  --magenta-alpha-1: hsl(340 100% 50% / 0.01);
-  --magenta-alpha-2: hsl(343 100% 44% / 0.03);
-  --magenta-alpha-3: hsl(341 100% 50% / 0.09);
-  --magenta-alpha-4: hsl(340 100% 49% / 0.14);
-  --magenta-alpha-5: hsl(339 100% 45% / 0.19);
-  --magenta-alpha-6: hsl(338 100% 41% / 0.25);
-  --magenta-alpha-7: hsl(338 100% 37% / 0.33);
-  --magenta-alpha-8: hsl(336 100% 36% / 0.42);
-  --magenta-alpha-9: hsl(336 100% 44% / 0.76);
-  --magenta-alpha-10: hsl(332 100% 42% / 0.8);
-  --magenta-alpha-11: hsl(336 100% 38% / 0.89);
-  --magenta-alpha-12: hsl(333 100% 16% / 0.91);
-  --magenta-inverse-subtle: var(--magenta-2);
+  --crimson-1: hsl(340 100% 99%);
+  --crimson-2: hsl(343 78% 98%);
+  --crimson-3: hsl(341 100% 96%);
+  --crimson-4: hsl(341 94% 93%);
+  --crimson-5: hsl(340 81% 89%);
+  --crimson-6: hsl(338 69% 85%);
+  --crimson-7: hsl(338 60% 80%);
+  --crimson-8: hsl(336 55% 73%);
+  --crimson-9: hsl(336 80% 58%);
+  --crimson-10: hsl(336 73% 54%);
+  --crimson-11: hsl(336 75% 45%);
+  --crimson-12: hsl(332 63% 24%);
+  --crimson-inverse: var(--crimson-1);
+  --crimson-alpha-1: hsl(340 100% 50% / 0.01);
+  --crimson-alpha-2: hsl(343 100% 44% / 0.03);
+  --crimson-alpha-3: hsl(341 100% 50% / 0.09);
+  --crimson-alpha-4: hsl(340 100% 49% / 0.14);
+  --crimson-alpha-5: hsl(339 100% 45% / 0.19);
+  --crimson-alpha-6: hsl(338 100% 41% / 0.25);
+  --crimson-alpha-7: hsl(338 100% 37% / 0.33);
+  --crimson-alpha-8: hsl(336 100% 36% / 0.42);
+  --crimson-alpha-9: hsl(336 100% 44% / 0.76);
+  --crimson-alpha-10: hsl(332 100% 42% / 0.8);
+  --crimson-alpha-11: hsl(336 100% 38% / 0.89);
+  --crimson-alpha-12: hsl(333 100% 16% / 0.91);
+  --crimson-inverse-subtle: var(--crimson-2);
   --neutral-1: hsl(240 20% 99%);
   --neutral-2: hsl(240 20% 98%);
   --neutral-3: hsl(240 11% 95%);
@@ -124,10 +124,10 @@
   --yellow-inverse-subtle: var(--yellow-2);
   --translucent: hsla(240 20% 99% / 0.25);
   --background-translucent: hsla(240 20% 99% / 0.85);
-  --focus-magenta: var(--magenta-alpha-3);
+  --focus-crimson: var(--crimson-alpha-3);
   --focus-cyan: var(--cyan-alpha-3);
   --focus-yellow: var(--yellow-alpha-3);
-  --focus-ring: var(--focus-magenta);
+  --focus-ring: var(--focus-crimson);
   --modal-border: hsla(240 0% 100% / 0);
   --scrim: hsl(207 100% 2% / 0.5);
 }
@@ -159,32 +159,32 @@
   --cyan-alpha-11: hsl(190 99% 66% / 0.9);
   --cyan-alpha-12: hsl(190 97% 86% / 0.97);
   --cyan-inverse-subtle: var(--cyan-11);
-  --magenta-1: hsl(338 19% 8%);
-  --magenta-2: hsl(337 25% 10%);
-  --magenta-3: hsl(333 45% 15%);
-  --magenta-4: hsl(331 62% 19%);
-  --magenta-5: hsl(331 59% 23%);
-  --magenta-6: hsl(333 49% 29%);
-  --magenta-7: hsl(335 45% 36%);
-  --magenta-8: hsl(336 45% 48%);
-  --magenta-9: hsl(336 80% 58%);
-  --magenta-10: hsl(338 82% 63%);
-  --magenta-11: hsl(345 100% 79%);
-  --magenta-12: hsl(330 91% 91%);
-  --magenta-inverse: var(--magenta-12);
-  --magenta-alpha-1: hsl(337 91% 51% / 0.04);
-  --magenta-alpha-2: hsl(337 88% 57% / 0.07);
-  --magenta-alpha-3: hsl(333 99% 58% / 0.16);
-  --magenta-alpha-4: hsl(331 98% 54% / 0.25);
-  --magenta-alpha-5: hsl(331 98% 57% / 0.32);
-  --magenta-alpha-6: hsl(333 99% 63% / 0.39);
-  --magenta-alpha-7: hsl(335 98% 66% / 0.5);
-  --magenta-alpha-8: hsl(336 99% 68% / 0.67);
-  --magenta-alpha-9: hsl(336 99% 63% / 0.91);
-  --magenta-alpha-10: hsl(338 100% 67% / 0.93);
-  --magenta-alpha-11: hsl(345 100% 79% / 0.99);
-  --magenta-alpha-12: hsl(330 100% 92% / 0.99);
-  --magenta-inverse-subtle: var(--magenta-11);
+  --crimson-1: hsl(338 19% 8%);
+  --crimson-2: hsl(337 25% 10%);
+  --crimson-3: hsl(333 45% 15%);
+  --crimson-4: hsl(331 62% 19%);
+  --crimson-5: hsl(331 59% 23%);
+  --crimson-6: hsl(333 49% 29%);
+  --crimson-7: hsl(335 45% 36%);
+  --crimson-8: hsl(336 45% 48%);
+  --crimson-9: hsl(336 80% 58%);
+  --crimson-10: hsl(338 82% 63%);
+  --crimson-11: hsl(345 100% 79%);
+  --crimson-12: hsl(330 91% 91%);
+  --crimson-inverse: var(--crimson-12);
+  --crimson-alpha-1: hsl(337 91% 51% / 0.04);
+  --crimson-alpha-2: hsl(337 88% 57% / 0.07);
+  --crimson-alpha-3: hsl(333 99% 58% / 0.16);
+  --crimson-alpha-4: hsl(331 98% 54% / 0.25);
+  --crimson-alpha-5: hsl(331 98% 57% / 0.32);
+  --crimson-alpha-6: hsl(333 99% 63% / 0.39);
+  --crimson-alpha-7: hsl(335 98% 66% / 0.5);
+  --crimson-alpha-8: hsl(336 99% 68% / 0.67);
+  --crimson-alpha-9: hsl(336 99% 63% / 0.91);
+  --crimson-alpha-10: hsl(338 100% 67% / 0.93);
+  --crimson-alpha-11: hsl(345 100% 79% / 0.99);
+  --crimson-alpha-12: hsl(330 100% 92% / 0.99);
+  --crimson-inverse-subtle: var(--crimson-11);
   --neutral-1: hsl(240 6% 7%);
   --neutral-2: hsl(220 6% 10%);
   --neutral-3: hsl(225 6% 14%);
@@ -238,10 +238,10 @@
   --yellow-inverse-subtle: var(--yellow-2);
   --translucent: hsla(240 6% 7% / 0.85);
   --background-translucent: hsla(240 6% 7% / 0.85);
-  --focus-magenta: var(--magenta-alpha-5);
+  --focus-crimson: var(--crimson-alpha-5);
   --focus-cyan: var(--cyan-alpha-5);
   --focus-yellow: var(--yellow-alpha-5);
-  --focus-ring: var(--focus-magenta);
+  --focus-ring: var(--focus-crimson);
   --modal-border: var(--border-subtle);
   --scrim: hsl(240 6% 7% / 0.75);
 }
@@ -304,16 +304,16 @@ body,
   --background-inverse: var(--neutral-12);
   --background-solid: var(--neutral-9);
   --background-subtle: var(--neutral-2);
-  --background-selected: var(--magenta-9);
+  --background-selected: var(--crimson-9);
   --border-element: var(--neutral-alpha-7);
   --border-element-hover: var(--neutral-alpha-8);
   --border-input-hover: var(--neutral-alpha-8);
-  --border-input-focus: var(--magenta-8);
+  --border-input-focus: var(--crimson-8);
   --border-input: var(--border-element);
   --border-subtle: var(--neutral-alpha-6);
-  --magenta: var(--magenta-9);
-  --link: var(--magenta-11);
-  --link-hover: var(--magenta-10);
+  --crimson: var(--crimson-9);
+  --link: var(--crimson-11);
+  --link-hover: var(--crimson-10);
 }
 
 body,
@@ -337,39 +337,39 @@ body,
   --button-solid-hover-text: var(--text-default);
   --colored-text-default: var(--text-default);
   --colored-text-inverse: var(--neutral-inverse);
-  --colored-text-link: var(--magenta-alpha-11);
+  --colored-text-link: var(--crimson-alpha-11);
   --colored-text-subtle: var(--text-subtle);
 }
 
-[data-color="magenta"],
+[data-color="crimson"],
 [data-color="primary"] {
-  --background-solid: var(--magenta-9);
-  --background-light: var(--magenta-3);
-  --background-light-hover: var(--magenta-4);
-  --background-subtle: var(--magenta-2);
-  --button-ghost-icon: var(--magenta-11);
-  --button-ghost-text: var(--magenta-12);
-  --button-outline-border: var(--magenta-alpha-7);
-  --button-outline-hover-border: var(--magenta-alpha-8);
-  --button-outline-hover-fill: var(--magenta-alpha-4);
-  --button-outline-active-fill: var(--magenta-alpha-5);
-  --button-outline-icon: var(--magenta-alpha-11);
-  --button-outline-text: var(--magenta-alpha-12);
-  --button-solid-fill: var(--magenta-alpha-9);
-  --button-solid-icon: var(--magenta-inverse);
-  --button-solid-text: var(--magenta-inverse);
-  --button-solid-hover-fill: var(--magenta-alpha-10);
-  --button-solid-hover-text: var(--magenta-inverse);
-  --colored-text-default: var(--magenta-alpha-11);
-  --colored-text-inverse: var(--magenta-inverse);
-  --colored-text-link: var(--magenta-alpha-11);
-  --colored-text-subtle: var(--magenta-alpha-9);
-  --pure: var(--magenta-9);
-  --focus-ring: var(--focus-magenta);
-  --border-element: var(--magenta-7);
-  --border-subtle: var(--magenta-alpha-6);
-  --link: var(--magenta-11);
-  --link-hover: var(--magenta-12);
+  --background-solid: var(--crimson-9);
+  --background-light: var(--crimson-3);
+  --background-light-hover: var(--crimson-4);
+  --background-subtle: var(--crimson-2);
+  --button-ghost-icon: var(--crimson-11);
+  --button-ghost-text: var(--crimson-12);
+  --button-outline-border: var(--crimson-alpha-7);
+  --button-outline-hover-border: var(--crimson-alpha-8);
+  --button-outline-hover-fill: var(--crimson-alpha-4);
+  --button-outline-active-fill: var(--crimson-alpha-5);
+  --button-outline-icon: var(--crimson-alpha-11);
+  --button-outline-text: var(--crimson-alpha-12);
+  --button-solid-fill: var(--crimson-alpha-9);
+  --button-solid-icon: var(--crimson-inverse);
+  --button-solid-text: var(--crimson-inverse);
+  --button-solid-hover-fill: var(--crimson-alpha-10);
+  --button-solid-hover-text: var(--crimson-inverse);
+  --colored-text-default: var(--crimson-alpha-11);
+  --colored-text-inverse: var(--crimson-inverse);
+  --colored-text-link: var(--crimson-alpha-11);
+  --colored-text-subtle: var(--crimson-alpha-9);
+  --pure: var(--crimson-9);
+  --focus-ring: var(--focus-crimson);
+  --border-element: var(--crimson-7);
+  --border-subtle: var(--crimson-alpha-6);
+  --link: var(--crimson-11);
+  --link-hover: var(--crimson-12);
 }
 
 [data-color="cyan"] {
