--- a/app/frontend/components/atoms/Checkbox/Checkbox.module.css
+++ b/app/frontend/components/atoms/Checkbox/Checkbox.module.css
@@ -20,6 +20,7 @@
   /* Set root radius when in a skeleton */
   border-radius: var(--skeleton-radius);
   background-color: transparent;
+  outline-color: var(--accent-indicator);
   cursor: var(--cursor-checkbox);
   aspect-ratio: 1;
 
