--- a/app/frontend/components/pages/Home/Home.module.css
+++ b/app/frontend/components/pages/Home/Home.module.css
@@ -2,6 +2,7 @@
   display: flex;
   flex: 1;
   flex-direction: column;
+  grid-column: full-bleed;
   justify-content: center;
   align-items: center;
 }
