--- a/app/views/participant_mailer/registration_confirmation.html.erb
+++ b/app/views/participant_mailer/registration_confirmation.html.erb
@@ -2,7 +2,7 @@
   Kia ora <%= @user.profile.name %>,
 <p>
 <p>
-  You’re coming to NZIF 2023! We’re so excited to have you join us.
+  You’re coming to NZIF <%= @festival.year %>! We’re so excited to have you join us.
 </p>
 <p>
   Right now, we’ve recorded your workshop preferences as part of
@@ -38,5 +38,5 @@
 <p>
   Ngā mihi nui,<br />
   Matt and Jim<br/>
-  NZIF 2023 Artistic Co-Directors
+  NZIF <%= @festival.year %> Artistic Co-Directors
 </p>
