--- a/app/frontend/components/pages/Registration/Registration.module.css
+++ b/app/frontend/components/pages/Registration/Registration.module.css
@@ -215,7 +215,8 @@
   margin-inline: calc(var(--space-4) * -1);
   padding-inline: var(--space-4);
   background: var(--background-translucent);
-  backdrop-filter: blur(6px);
+
+  /* backdrop-filter: blur(6px); */
 
   button, a {
     span {
