--- a/app/frontend/components/organisms/ActivityList/ActivityList.module.css
+++ b/app/frontend/components/organisms/ActivityList/ActivityList.module.css
@@ -15,7 +15,8 @@
     grid-template-columns: subgrid;
     grid-column: full-bleed;
     background-color: var(--background-translucent);
-    backdrop-filter: blur(6px);
+
+    /* backdrop-filter: blur(6px); */
   }
 
   .activities {
