--- a/app/views/participant_mailer/registration_confirmation.html.erb
+++ b/app/views/participant_mailer/registration_confirmation.html.erb
@@ -6,12 +6,12 @@
 </p>
 <p>
   Right now, we’ve recorded your workshop preferences as part of
-  <b>earlybird registration</b>.
+  <b>preferential registration</b>.
   You can always change your preferences by logging in to the
   <%= link_to 'NZIF registration website', registration_url %>.
 </p>
 <p>
-  Once we’ve closed earlybird registrations
+  Once we’ve closed preferential registrations
   on <%= @festival.earlybird_closes_at.to_date.to_fs(:friendly) %>, our system will allocate
   workshop placements based on your preferences.
   In most cases, you should get your first or second choices in most workshop slots,
@@ -25,7 +25,7 @@
 </p>
 <p>
   <b>Important:</b> If payment is not received prior to the start of the Festival, and we haven’t
-  heard from you, we’ll cancel your registration and offer your workshop places
+  heard from you, we reserve the right to cancel your registration and offer your workshop places
   to someone else, so please let us know if that’s going to be an issue.
 </p>
 <p>
