cope with multi-slot sessions in allocation algorithm

--- a/app/frontend/components/pages/admin/Allocations/Allocations.module.css
+++ b/app/frontend/components/pages/admin/Allocations/Allocations.module.css
@@ -17,3 +17,12 @@
     text-transform: uppercase;
   }
 }
+
+.person {
+  border-radius: var(--radius-2);
+  cursor: grab;
+
+  &:hover {
+    background-color: var(--gray-a2);
+  }
+}
