--- a/app/frontend/components/atoms/ChoiceBadge/ChoiceBadge.module.css
+++ b/app/frontend/components/atoms/ChoiceBadge/ChoiceBadge.module.css
@@ -1,9 +1,21 @@
 .choiceBadge {
+  display: inline-flex;
   min-width: calc(var(--space-1) + var(--line-height-1));
+  user-select: none;
 
   &:has([data-icon]) {
-    display: inline-flex;
     justify-content: center;
     padding-inline: 0;
+  }
+
+  &[data-size='dot'] {
+    width: 1rem;
+    height: 1rem;
+    padding: 0;
+    background: transparent;
+  }
+
+  a:has(&) {
+    display: contents;
   }
 }
