persist allocation changes

--- a/app/frontend/components/pages/admin/Allocations/Allocations.module.css
+++ b/app/frontend/components/pages/admin/Allocations/Allocations.module.css
@@ -12,6 +12,9 @@
 }
 
 .session {
+  display: flex;
+  flex-direction: column;
+
   h4 {
     letter-spacing: 0.1em;
     text-transform: uppercase;
@@ -20,9 +23,58 @@
 
 .person {
   border-radius: var(--radius-2);
-  cursor: grab;
+  user-select: none;
 
   &:hover {
-    background-color: var(--gray-a2);
+    background-color: var(--color-background);
+  }
+}
+
+.dragOverlay {
+  border-radius: var(--radius-2);
+  background-color: var(--gray-1);
+  box-shadow: var(--shadow-4);
+  cursor: grabbing;
+}
+
+.dropzone {
+  position: relative;
+  flex: 1 0 6rem;
+
+  &::after {
+    content: attr(data-preference);
+    position: absolute;
+    inset: 0;
+    display: grid;
+    place-content: center;
+    overflow: hidden;
+    border-radius: var(--radius-3);
+    background: var(--lime-a6);
+    color: var(--color-background);
+    font-weight: var(--font-weight-black);
+    font-size: 4rem;
+    line-height: 1;
+    text-shadow: 0 0 2rem var(--lime-a9);
+    opacity: 0;
+    pointer-events: none;
+    transition: opacity 0.1s ease;
+  }
+
+  &[data-preference] {
+    &::after {
+      opacity: 0.5;
+    }
+  }
+
+  &[data-preference="0"]::after {
+    content: "";
+  }
+
+  & ~ & {
+    flex-grow: 0;
+  }
+
+  [data-slots="2"] & {
+    flex-grow: 1;
   }
 }
