--- a/app/frontend/components/pages/Registration/Workshops/Workshops.module.css
+++ b/app/frontend/components/pages/Registration/Workshops/Workshops.module.css
@@ -1,5 +1,6 @@
 .workshopSelection {
   grid-template-rows: 1fr;
+  align-items: start;
   padding-block: 0;
 
   :global(.buttons) {
@@ -114,6 +115,12 @@
   place-self: center center;
   font-weight: var(--font-weight-bold);
 
+  &[data-disabled] {
+    background-color: var(--accent-a9);
+    color: var(--accent-contrast);
+    opacity: 1;
+  }
+
   @media (--sm) {
     grid-area: top;
     place-self: start end;
@@ -156,6 +163,6 @@
   }
 
   .actions {
-
+    /* empty */
   }
 }
