fix donation receipt page

--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -421,7 +421,7 @@
               <table role="presentation" border="0" cellpadding="0" cellspacing="0">
                 <tr>
                   <td class="content-block">
-                    <span class="apple-link">This email is a communication to participants in the <a href="https://my.improvfest.nz">NZ Improv Festival</a></span>
+                    <span class="apple-link">This email is a communication on behalf of the <a href="https://my.improvfest.nz">NZ Improv Festival</a></span>
                   </td>
                 </tr>
               </table>
